--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-    
+
 #clear{  
 	width: 270px;  
 	border: 3px solid black;  
@@ -11,7 +11,12 @@
 }  
 #clear:hover {background-color: white;}
 
-
+#m{
+    font-size: xx-large;
+    font-family: calc();
+    font-style: oblique;
+    color: cyan;
+}
 .formstyle  
 {  
 	width: 300px;  
@@ -21,7 +26,57 @@
 	border-radius: 5px;  
 	padding: 20px;  
 }  
-  
+#del{
+    background-color: aquamarine;
+    border-radius: 40px;
+    text-align: left;
+}
+#del:hover {background-color: red;}
+#b1{
+    border-radius: 40px;
+    background-color: aquamarine;
+}
+#b1:hover {background-color: yellow;}
+#b2{
+    border-radius: 40px;
+    background-color: aquamarine;
+}
+#b2:hover {background-color: yellow;}
+#add{
+    border-radius: 40px;
+    background-color: aquamarine;
+}
+#add:hover {background-color: yellow;}
+#sub{
+    border-radius: 40px;
+    background-color: aquamarine;
+}
+#sub:hover {background-color: yellow;}
+#mul{
+    border-radius: 40px;
+    background-color: aquamarine;
+}
+#mul:hover {background-color: yellow;}
+#div{
+    border-radius: 40px;
+    background-color: aquamarine;
+}
+#div:hover {background-color: yellow;}
+#mod{
+    border-radius: 40px;
+    background-color: aquamarine;;
+}
+#mod:hover {background-color: yellow;}
+#dot{
+    border-radius: 40px;
+    background-color: aquamarine;
+}
+#dot:hover {background-color: yellow;}
+#equal{
+    border-radius: 40px;
+    background-color: aquamarine;
+}
+#equal:hover {background-color: yellow;}
 
   
 input  
@@ -33,16 +88,19 @@ input
     border-radius: 20px;  
     padding: 25px;
     padding: inline 10px;
-    margin: 5px;  
+    margin: 7px;  
     font-size: 15px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     cursor: pointer;
     background-color: aqua;
+    text-align: center;
+    
+
     
 }  
 input:hover {background-color: yellow;}
 body{
-    background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+    background-image:  linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
 }
 
 #calc{  
@@ -56,7 +114,7 @@ body{
 }  
 
 .formstyle{
-    height: 650px;
+    height: 750px;
     border: 7px solid black;
     background-color:blueviolet ;
 
